[project]
name = "lumacorp-api"
version = "0.1.0"
description = ""
authors = [
    {name = "greatlolz",email = "88207459+GreatLolz@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "preston (>=4.12.1,<5.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "apscheduler (>=3.10.4,<4.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
